[workspace]
resolver = "2"
members = [
    "examples/fungible-allowlist",
    "examples/fungible-blocklist",
    "examples/fungible-capped",
    "examples/fungible-merkle-airdrop",
    "examples/fungible-governor/*",
    "examples/fungible-votes",
    "examples/fee-forwarder-permissioned",
    "examples/fee-forwarder-permissionless",
    "examples/fungible-pausable",
    "examples/fungible-vault",
    "examples/merkle-voting",
    "examples/nft-access-control",
    "examples/nft-consecutive",
    "examples/nft-enumerable",
    "examples/nft-royalties",
    "examples/nft-sequential-minting",
    "examples/ownable",
    "examples/pausable",
    "examples/rwa/*",
    "examples/sac-admin-generic",
    "examples/sac-admin-wrapper",
    "examples/multisig-smart-account/*",
    "examples/timelock-controller",
    "examples/upgradeable/*",
    "packages/accounts",
    "packages/access",
    "packages/contract-utils",
    "packages/fee-abstraction",
    "packages/governance",
    "packages/macros",
    "packages/test-utils/*",
    "packages/tokens",
    "packages/zk-email",
]
exclude = [
    "examples/upgradeable/testdata",
    "examples/rwa/sign-claim",   # native CLI tool, not a WASM contract
]

[workspace.package]
authors = ["OpenZeppelin"]
edition = "2021"
license = "MIT"
repository = "https://github.com/OpenZeppelin/stellar-contracts"
documentation = "https://docs.openzeppelin.com/stellar-contracts/"
keywords = ["stellar", "soroban", "smart-contracts", "standards"]
categories = ["no-std", "wasm"]
version = "0.6.0"

[workspace.dependencies]
soroban-sdk = { version = "25.3.0", features = [
    "experimental_spec_shaking_v2",
] }
proc-macro2 = "1.0"
proptest = "1"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
soroban-test-helpers = "0.2.3"
hex-literal = "1.0.0"
ed25519-dalek = "2.1.1"
k256 = "0.13.4"
p256 = "0.13.2"
serde = { version = "1", default-features = false }
serde-json-core = { version = "0.6.0", default-features = false }

# members
stellar-access = { path = "packages/access", version = "0.6.0" }
stellar-accounts = { path = "packages/accounts", version = "0.6.0" }
stellar-contract-utils = { path = "packages/contract-utils", version = "0.6.0" }
stellar-event-assertion = { path = "packages/test-utils/event-assertion" }
stellar-fee-abstraction = { path = "packages/fee-abstraction", version = "0.6.0" }
stellar-governance = { path = "packages/governance", version = "0.6.0" }
stellar-tokens = { path = "packages/tokens", version = "0.6.0" }
stellar-macros = { path = "packages/macros", version = "0.6.0" }
stellar-zk-email = { path = "packages/zk-email", version = "0.6.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://developers.stellar.org/docs/build/smart-contracts/example-contracts/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
