[package]
name = "bitcoind-async-client"
version = "0.10.1"
edition = "2021"
authors = [
  "Jose Storopoli <jose@alpenlabs.io>",
  "Bibek Pandey <bibek@alpenlabs.io>",
  "Ashish Thapa <ashish@alpenlabs.io>",
  "Prajwol Gyawali <prajwol@alpenlabs.io>",
  "Rajil Bajracharya <rajil@alpenlabs.io>",
  "Sapin Bajracharya <sapin@alpenlabs.io>",
  "Trey Del Bonis <trey@alpenlabs.io>",
]
description = "BitcoinD JSON-RPC Async Client"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/alpenlabs/bitcoind-async-client"
categories = ["cryptography::cryptocurrencies"]
keywords = ["crypto", "bitcoin"]

[features]
default = ["29_0"]
29_0 = []
raw_rpc = []

[dependencies]
base64 = "0.22.1"
bitcoin = { version = "0.32.8", features = ["serde", "base64"] }
corepc-types = "0.10.1" # keep in sync with corepc-node
hex = { package = "hex-conservative", version = "0.2.1" } # for optimization keep in sync with bitcoin
bitreq = { version = "0.3", default-features = false, features = ["async-https"] }
secp256k1 = { version = "0.29.1", features = [ # for optimization keep in sync with bitcoin
  "global-context",
] }
serde = "1.0.228"
serde_json = { version = "1.0.149", features = ["raw_value"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", default-features = false }

[dev-dependencies]
anyhow = "1.0.101"
corepc-node = { version = "0.10.1", features = ["29_0", "download"] } # keep in sync with corepc-types
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[profile.release]
opt-level = "z"   # Optimized for size, use 3 for speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary
