[workspace]
members = [
    "api",
    "cli",
    "clients/rust/stake-deposit-interceptor",
    "cranker",
    "stake_deposit_interceptor",
]
resolver = "2"

[workspace.package]
version = "0.3.1"
authors = ["Jito Network <team@jito.network>"]
repository = "https://github.com/jito-foundation/stake-deposit-interceptor"
homepage = "https://jito.network"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
anchor-lang = { version = "0.32.1" }
anyhow = "1.0.101"
bincode = "1.3.1"
borsh = "1.6.0"
bytemuck = "1.19.0"
clap = { version = "4.5.58", features = ["derive", "env"] }
env_logger = "0.11.9"
futures = "0.3"
jito-bytemuck = { git = "https://github.com/jito-foundation/jito-bytemuck.git", tag = "v0.1.0" }
jito-whitelist-management-client = { package = "jito-whitelist-management-client", git = "https://github.com/jito-foundation/jito-whitelist-management.git", version = "0.1.0" }
jito-whitelist-management-core = { package = "jito-whitelist-management-core", git = "https://github.com/jito-foundation/jito-whitelist-management.git", version = "0.1.0" }
log = "0.4.29"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = "1.0.228"
serde-big-array = "0.5.1"
serde_json = "1.0.149"
serde_with = "3.16.1"
shank = "0.3.0"
solana-account = "3.0.0"
solana-account-decoder = "3.0.0"
solana-account-info = "3.0.0"
solana-clap-utils = { version = "3.0.0", features = ["agave-unstable-api"] }
solana-client = "3.0.0"
solana-clock = { version = "3.0.0", features = ["sysvar"] }
solana-commitment-config = "3.0.0"
solana-compute-budget-interface = "3.0.0"
solana-cpi = "3.0.0"
solana-derivation-path = "3.0"
solana-hash = "3.0.0"
solana-instruction = "3.0.0"
solana-keypair = "3.0.0"
solana-native-token = "3.0.0"
solana-program = "3.0.0"
solana-program-error = "3.0.0"
solana-program-log = "1.1.0"
solana-program-test = { version = "3.0.0", features = ["agave-unstable-api"] }
solana-pubkey = "3.0.0"
solana-remote-wallet = { version = "3.0.0", features = ["agave-unstable-api"] }
solana-rpc-client = "3.0.0"
solana-rpc-client-api = "3.0.0"
solana-sdk = "3.0.0"
solana-signature = "3.0"
solana-signer = "3.0"
solana-stake-interface = { version = "3.0.0", features = ["bincode", "sysvar"] }
solana-system-interface = "3.0.0"
solana-transaction = "3.0.0"
solana-vote-interface = { version = "3.0.0", features = ["bincode"] }
spl-associated-token-account-interface = "2.0.0"
spl-stake-pool = { git = "https://github.com/solana-program/stake-pool.git", version = "2.0.3", features = ["no-entrypoint"] }
spl-token = { version = "9.0", features = ["no-entrypoint"] }
spl-token-2022-interface = "2.1.0"
spl-token-interface = "2.0.0"
stake-deposit-interceptor = { path = "stake_deposit_interceptor", version = "0.3.0" }
stake-deposit-interceptor-client = { path = "clients/rust/stake-deposit-interceptor" }
thiserror = "1.0.65"
tokio = { version = "1.49.0", features = ["macros"] }
uriparse = "0.6.4"
